Fix button on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -64,6 +64,10 @@ article[role="group"] {
     .reset-container {
         align-self: center;
     }
+    .reset-button {
+        font-size: 0.875rem;  /* 14px */
+        /* padding: 0.5rem 0.75rem; */
+    }
     .divider-grid {
         position: sticky;
         top: 0;
